# read-it-later

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  diesel.toml  meson.build  meson_options.txt  rustfmt.toml
build-aux/: cargo.sh  com.belmoussaoui.ReadItLater.Devel.json  com.belmoussaoui.ReadItLaterDevel.json  com.belmoussaoui.ReadingListDevel.json  dist-vendor.sh
data/: com.belmoussaoui.ReadItLater.desktop.in.in  com.belmoussaoui.ReadItLater.gschema.xml.in  com.belmoussaoui.ReadItLater.metainfo.xml.in.in  com.belmoussaoui.ReadingList.desktop.in.in  com.belmoussaoui.ReadingList.gschema.xml.in  com.belmoussaoui.ReadingList.metainfo.xml.in.in  meson.build  resources.gresource.xml
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/article/: layout-dark.css  layout.css  layout.html  layout.js
data/resources/ui/: about_dialog.ui.in  article.ui  article_preview.ui  article_row.ui  articles.ui  articles_list.ui  login.ui  login.ui.in  menu.ui  new_article.ui  settings.ui  shortcuts.ui  syncing.ui  window.ui  window.ui.in
data/resources/ui/gtk/: help-overlay.ui
docs/: development.md  profiling.md  release.md  screenshots.md  testing.md
hooks/: pre-commit.hook
migrations/2019-10-17-193110_create_articles/: down.sql  up.sql
migrations/2024-01-29-133832_add_preview_text/: down.sql  up.sql
po/: LINGUAS  POTFILES.in  POTFILES.skip  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  ka.po  meson.build  nl.po  oc.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
src/: application.rs  clone.rs  config.rs.in  database.rs  main.rs  meson.build  schema.rs  static_resources.rs.in  utils.rs  window.rs  window_state.rs
src/models/: account.rs  article.rs  article_filter.rs  article_object.rs  article_sorter.rs  articles.rs  client_manager.rs  mod.rs  object_wrapper.rs  preview_image.rs  secret.rs  secret_service.rs
src/settings/: key.rs  mod.rs  settings_manager.rs
src/views/: archive.rs  article.rs  articles.rs  articles_list.rs  favorites.rs  login.rs  mod.rs  syncing.rs  unread.rs
src/widgets/: article.rs  login.rs  mod.rs  new_article.rs  settings.rs  window.rs
src/widgets/articles/: articles_list.rs  index.rs  list.rs  mod.rs  preview.rs  row.rs
