[package]
name = "read-it-later"
version = "0.0.2"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2018"

[dependencies]
gtk = {version = "0.4", package = "gtk4"}
adw = { version = "0.2.0-alpha.2", package = "libadwaita", features = ["v1_2"] }
webkit2gtk5 = { version = "0.1" }
log = "0.4"
gettext-rs= { version = "0.7", features = ["gettext-system"] }
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
wallabag-api = "0.4.1"
pretty_env_logger = "0.4"
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = {  version = "1.4", features = ["sqlite"] }
anyhow = "1.0"
isahc = "1.7"
sanitize_html = "0.7"
regex = "1.5"
secret-service = "2.0"
chrono = "0.4"
url = "2.2"
strum = { version = "0.24", features = ["derive"] }
html2pango = "0.4"
rust-crypto = "0.2"
async-std = "1.9"
futures = { version = "0.3", features = [ "thread-pool" ] }
gtk-macros = "0.3"
http-client = { version = "6.5", features = ["native_client"] }
once_cell = "1.8"
