[package]
name = "read-it-later"
version = "0.3.0"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>", "Casper Meijn <casper@meijn.net>"]
edition = "2021"

[dependencies]
gtk = {version = "0.6", package = "gtk4", features = ["gnome_44"]}
adw = { version = "0.4", package = "libadwaita", features = ["v1_3"] }
webkit = { version = "0.1", package = "webkit6" }
log = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
wallabag-api = "0.4"
pretty_env_logger = "0.4"
diesel = { version = "1", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = {  version = "1", features = ["sqlite"] }
anyhow = "1"
isahc = "1"
sanitize_html = "0.7"
regex = "1"
secret-service = "2"
chrono = "0.4"
url = "2"
strum = { version = "0.24", features = ["derive"] }
rust-crypto = "0.2"
async-std = "1"
futures = { version = "0.3", features = [ "thread-pool" ] }
gtk-macros = "0.3"
once_cell = "1"
