# Copyright 2019 Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>
# Copyright 2020 Julian Hofer <julian.git@mailbox.org>
# Copyright 2021 Alistair Francis <alistair@alistair23.me>
# Copyright 2021 Samuel Walladge <samuel@swalladge.net>
# Copyright 2022 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "read-it-later"
version = "0.6.2"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>", "Casper Meijn <casper@meijn.net>"]
edition = "2021"

[dependencies]
gtk = {version = "0.10", package = "gtk4", features = ["gnome_47"]}
adw = { version = "0.8", package = "libadwaita", features = ["v1_6"] }
webkit = { version = "0.5", package = "webkit6" }
log = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
wallabag-api = "0.4"
pretty_env_logger = "0.5"
diesel = { version = "2.2.1", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = {  version = "2.2.0", features = ["sqlite"] }
anyhow = "1"
isahc = "1"
sanitize_html = "0.9"
regex = "1"
secret-service = { version = "4", features = ["rt-async-io-crypto-openssl"] }
chrono = "0.4"
url = "2"
strum = { version = "0.27", features = ["derive"] }
sha1 = "0.10.6"
base16ct = { version = "0.3", features = [ "alloc" ] }
async-std = "1"
futures = { version = "0.3", features = [ "thread-pool" ] }
