# Copyright 2019 Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>
# Copyright 2022 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: GPL-3.0-or-later

option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default',
  description: 'The build profile for GTK Rust Template. One of "default" or "development".'
)
