install_data(
  'com.belmoussaoui.ReadItLater.svg',
  install_dir: iconsdir / 'hicolor' / 'scalable' / 'apps',
  rename: '@0@.svg'.format(application_id)
)

install_data(
  'com.belmoussaoui.ReadItLater-symbolic.svg',
  install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
  rename: '@0@-symbolic.svg'.format(application_id)
)
